--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -255,13 +255,13 @@ jobs:
           pub const version_minor = 15;
           pub const version_patch = 1;
 
-            // LLVM support - required field
+          // LLVM support - critical field that was missing
           pub const have_llvm = true;
 
-          // Required debug fields that were causing build failures
+          // Debug and logging configuration
           pub const enable_debug_extensions = false;
           pub const debug_gpa = false;
-          pub const debug_allocator = false;
+          pub const debug_allocator = false;  
           pub const debug_bounds_check = false;
           pub const debug_safe_builtins = true;
           pub const debug_stack_trace = true;
@@ -269,12 +269,12 @@ jobs:
           pub const debug_verbose = false;
           pub const debug_optimize = false;
 
+          // Logging support - another missing field
+          pub const enable_logging = false;
+
           // Tracy profiler support
           pub const enable_tracy = false;
 
-          // Logging support
-          pub const enable_logging = false;
-          
           // Essential build configuration
           pub const enable_llvm = true;
           pub const enable_zlib = true;
@@ -328,6 +328,27 @@ jobs:
           pub const enable_tests = false;
           pub const enable_experimental = false;
           pub const verbose = false;
+
+          // Additional fields that might be referenced
+          pub const is_stage1 = false;
+          pub const only_c = false;
+          pub const only_cpp = false;
+          pub const force_gpa = false;
+          pub const sanitize_c = false;
+          pub const code_model = "default";
+          pub const pic = false;
+          pub const pie = false;
+          pub const red_zone = true;
+          pub const omit_frame_pointer = false;
+          pub const single_threaded = false;
+          pub const strip = false;
+          pub const link_libc = false;
+          pub const link_libcpp = false;
+          pub const function_sections = false;
+          pub const no_builtin = false;
+          pub const runtime_safety = true;
+          pub const test_filter = "";
+          pub const test_name_prefix = "";
           EOF
 
           echo "Verifying config.zig content:"
@@ -337,21 +358,209 @@ jobs:
           mkdir -p ../stage1
           cat > ../stage1/config.h.in << 'EOF'
           #pragma once
+
+          // Version information
           #define ZIG_VERSION_STRING "@ZIG_VERSION@"
           #define ZIG_VERSION_MAJOR @ZIG_VERSION_MAJOR@
           #define ZIG_VERSION_MINOR @ZIG_VERSION_MINOR@
           #define ZIG_VERSION_PATCH @ZIG_VERSION_PATCH@
+
+          // LLVM support - critical for build
+          #define ZIG_HAVE_LLVM 1
+
+          // Debug and logging configuration
+          #define ZIG_ENABLE_DEBUG_EXTENSIONS 0
+          #define ZIG_DEBUG_GPA 0
+          #define ZIG_DEBUG_ALLOCATOR 0
+          #define ZIG_DEBUG_BOUNDS_CHECK 0
+          #define ZIG_DEBUG_SAFE_BUILTINS 1
+          #define ZIG_DEBUG_STACK_TRACE 1
+          #define ZIG_DEBUG_SAFETY 1
+          #define ZIG_DEBUG_VERBOSE 0
+          #define ZIG_DEBUG_OPTIMIZE 0
+
+          // Logging support
+          #define ZIG_ENABLE_LOGGING 0
+
+          // Tracy profiler support
+          #define ZIG_ENABLE_TRACY 0
+
+          // Feature flags
+          #define ZIG_ENABLE_LLVM 1
+          #define ZIG_ENABLE_ZLIB 1
+          #define ZIG_ENABLE_ZSTD 1
+          #define ZIG_STATIC_ZLIB 0
+          #define ZIG_STATIC_ZSTD 0
+          #define ZIG_USE_LLD 0
+
+          // Build type
+          #define ZIG_BUILD_TYPE "Release"
+
+          // System library usage
+          #define ZIG_USE_SYSTEM_LLVM 1
+          #define ZIG_USE_SYSTEM_ZLIB 1
+          #define ZIG_USE_SYSTEM_ZSTD 1
+          #define ZIG_USE_SYSTEM_LIBC 1
+
+          // Optional features
+          #define ZIG_ENABLE_TESTS 0
+          #define ZIG_ENABLE_EXPERIMENTAL 0
+          #define ZIG_VERBOSE 0
+
+          // Additional configuration
+          #define ZIG_IS_STAGE1 0
+          #define ZIG_ONLY_C 0
+          #define ZIG_ONLY_CPP 0
+          #define ZIG_FORCE_GPA 0
+          #define ZIG_SANITIZE_C 0
+          #define ZIG_CODE_MODEL "default"
+          #define ZIG_PIC 0
+          #define ZIG_PIE 0
+          #define ZIG_RED_ZONE 1
+          #define ZIG_OMIT_FRAME_POINTER 0
+          #define ZIG_SINGLE_THREADED 0
+          #define ZIG_STRIP 0
+          #define ZIG_LINK_LIBC 0
+          #define ZIG_LINK_LIBCPP 0
+          #define ZIG_FUNCTION_SECTIONS 0
+          #define ZIG_NO_BUILTIN 0
+          #define ZIG_RUNTIME_SAFETY 1
+
+          // Path configuration (will be substituted by CMake)
+          #define ZIG_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@"
+          #define ZIG_LIB_DIR "@LIB_DIR@"
+          #define ZIG_INCLUDE_DIR "@INCLUDE_DIR@"
+          #define ZIG_BIN_DIR "@BIN_DIR@"
+          #define ZIG_LIBZIG_DIR "@LIBZIG_DIR@"
+
+          // LLVM paths
+          #define ZIG_LLVM_BIN_DIR "@LLVM_BIN_DIR@"
+          #define ZIG_LLVM_LIB_DIR "@LLVM_LIB_DIR@"
+          #define ZIG_LLVM_INCLUDE_DIR "@LLVM_INCLUDE_DIR@"
+
+          // Clang paths
+          #define ZIG_CLANG_BIN_DIR "@CLANG_BIN_DIR@"
+          #define ZIG_CLANG_LIB_DIR "@CLANG_LIB_DIR@"
+          #define ZIG_CLANG_INCLUDE_DIR "@CLANG_INCLUDE_DIR@"
+
+          // LLD paths
+          #define ZIG_LLD_BIN_DIR "@LLD_BIN_DIR@"
+          #define ZIG_LLD_LIB_DIR "@LLD_LIB_DIR@"
+          #define ZIG_LLD_INCLUDE_DIR "@LLD_INCLUDE_DIR@"
+
+          // Library paths
+          #define ZIG_ZLIB_LIB_DIR "@ZLIB_LIB_DIR@"
+          #define ZIG_ZLIB_INCLUDE_DIR "@ZLIB_INCLUDE_DIR@"
+          #define ZIG_ZSTD_LIB_DIR "@ZSTD_LIB_DIR@"
+          #define ZIG_ZSTD_INCLUDE_DIR "@ZSTD_INCLUDE_DIR@"
           EOF
 
           cat > ../stage1/config.zig.in << 'EOF'
-          pub const version_string = "@ZIG_VERSION@"; 
-          pub const version = "@ZIG_VERSION@";  // Add this line to match what src/main.zig expects
-          pub const version_major = @ZIG_VERSION_MAJOR@; 
-          pub const version_minor = @ZIG_VERSION_MINOR@; 
+          // Version information
+          pub const version_string = "@ZIG_VERSION@";
+          pub const version = "@ZIG_VERSION@";
+          pub const version_major = @ZIG_VERSION_MAJOR@;
+          pub const version_minor = @ZIG_VERSION_MINOR@;
           pub const version_patch = @ZIG_VERSION_PATCH@;
-          pub const enable_debug_extensions = false;
-          pub const debug_gpa = false;
-          pub const enable_tracy = false;
+
+          // LLVM support - critical for build
+          pub const have_llvm = @ZIG_HAVE_LLVM@;
+
+          // Debug and logging configuration
+          pub const enable_debug_extensions = @ZIG_ENABLE_DEBUG_EXTENSIONS@;
+          pub const debug_gpa = @ZIG_DEBUG_GPA@;
+          pub const debug_allocator = @ZIG_DEBUG_ALLOCATOR@;
+          pub const debug_bounds_check = @ZIG_DEBUG_BOUNDS_CHECK@;
+          pub const debug_safe_builtins = @ZIG_DEBUG_SAFE_BUILTINS@;
+          pub const debug_stack_trace = @ZIG_DEBUG_STACK_TRACE@;
+          pub const debug_safety = @ZIG_DEBUG_SAFETY@;
+          pub const debug_verbose = @ZIG_DEBUG_VERBOSE@;
+          pub const debug_optimize = @ZIG_DEBUG_OPTIMIZE@;
+
+          // Logging support
+          pub const enable_logging = @ZIG_ENABLE_LOGGING@;
+
+          // Tracy profiler support
+          pub const enable_tracy = @ZIG_ENABLE_TRACY@;
+
+          // Feature flags
+          pub const enable_llvm = @ZIG_ENABLE_LLVM@;
+          pub const enable_zlib = @ZIG_ENABLE_ZLIB@;
+          pub const enable_zstd = @ZIG_ENABLE_ZSTD@;
+          pub const static_zlib = @ZIG_STATIC_ZLIB@;
+          pub const static_zstd = @ZIG_STATIC_ZSTD@;
+          pub const use_lld = @ZIG_USE_LLD@;
+
+          // Build type
+          pub const build_type = @ZIG_BUILD_TYPE@;
+
+          // System library usage
+          pub const use_system_llvm = @ZIG_USE_SYSTEM_LLVM@;
+          pub const use_system_zlib = @ZIG_USE_SYSTEM_ZLIB@;
+          pub const use_system_zstd = @ZIG_USE_SYSTEM_ZSTD@;
+          pub const use_system_libc = @ZIG_USE_SYSTEM_LIBC@;
+
+          // Optional features
+          pub const enable_tests = @ZIG_ENABLE_TESTS@;
+          pub const enable_experimental = @ZIG_ENABLE_EXPERIMENTAL@;
+          pub const verbose = @ZIG_VERBOSE@;
+
+          // Additional configuration
+          pub const is_stage1 = @ZIG_IS_STAGE1@;
+          pub const only_c = @ZIG_ONLY_C@;
+          pub const only_cpp = @ZIG_ONLY_CPP@;
+          pub const force_gpa = @ZIG_FORCE_GPA@;
+          pub const sanitize_c = @ZIG_SANITIZE_C@;
+          pub const code_model = @ZIG_CODE_MODEL@;
+          pub const pic = @ZIG_PIC@;
+          pub const pie = @ZIG_PIE@;
+          pub const red_zone = @ZIG_RED_ZONE@;
+          pub const omit_frame_pointer = @ZIG_OMIT_FRAME_POINTER@;
+          pub const single_threaded = @ZIG_SINGLE_THREADED@;
+          pub const strip = @ZIG_STRIP@;
+          pub const link_libc = @ZIG_LINK_LIBC@;
+          pub const link_libcpp = @ZIG_LINK_LIBCPP@;
+          pub const function_sections = @ZIG_FUNCTION_SECTIONS@;
+          pub const no_builtin = @ZIG_NO_BUILTIN@;
+          pub const runtime_safety = @ZIG_RUNTIME_SAFETY@;
+
+          // Path configuration
+          pub const install_prefix = @ZIG_INSTALL_PREFIX@;
+          pub const lib_dir = @ZIG_LIB_DIR@;
+          pub const include_dir = @ZIG_INCLUDE_DIR@;
+          pub const bin_dir = @ZIG_BIN_DIR@;
+          pub const libzig_dir = @ZIG_LIBZIG_DIR@;
+
+          // LLVM paths
+          pub const llvm_bin_dir = @ZIG_LLVM_BIN_DIR@;
+          pub const llvm_lib_dir = @ZIG_LLVM_LIB_DIR@;
+          pub const llvm_include_dir = @ZIG_LLVM_INCLUDE_DIR@;
+
+          // Clang paths
+          pub const clang_bin_dir = @ZIG_CLANG_BIN_DIR@;
+          pub const clang_lib_dir = @ZIG_CLANG_LIB_DIR@;
+          pub const clang_include_dir = @ZIG_CLANG_INCLUDE_DIR@;
+
+          // LLD paths
+          pub const lld_bin_dir = @ZIG_LLD_BIN_DIR@;
+          pub const lld_lib_dir = @ZIG_LLD_LIB_DIR@;
+          pub const lld_include_dir = @ZIG_LLD_INCLUDE_DIR@;
+
+          // Library paths
+          pub const zlib_lib_dir = @ZIG_ZLIB_LIB_DIR@;
+          pub const zlib_include_dir = @ZIG_ZLIB_INCLUDE_DIR@;
+          pub const zstd_lib_dir = @ZIG_ZSTD_LIB_DIR@;
+          pub const zstd_include_dir = @ZIG_ZSTD_INCLUDE_DIR@;
+
+          // Linker configuration
+          pub const use_lld_linker = true;
+          pub const use_gnu_linker = false;
+          pub const use_msvc_linker = false;
+          pub const use_gold_linker = false;
+
+          // Test configuration
+          pub const test_filter = @ZIG_TEST_FILTER@;
+          pub const test_name_prefix = @ZIG_TEST_NAME_PREFIX@;
           EOF
           
       - name: Build Zig (Stage 1 - CMake)
@@ -415,17 +624,84 @@ jobs:
           echo "Configuring with CMake..."
           MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
           $CMAKE_CMD .. -GNinja \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_INSTALL_PREFIX="$MINGW_PREFIX" \
-            -DCMAKE_C_COMPILER=gcc \
-            -DCMAKE_CXX_COMPILER=g++ \
-            -DZIG_SHARED_LLVM=ON \
-            -DZIG_VERSION="$ZIG_VERSION" \
-            -DZIG_STATIC_ZLIB=OFF \
-            -DZIG_STATIC_ZSTD=OFF \
-            -DCMAKE_C_FLAGS="-O2 -DNDEBUG" \
-            -DCMAKE_CXX_FLAGS="-O2 -DNDEBUG" \
-            -DZIG_NO_LIB=ON 2>&1 | tee cmake-configure.log
+          -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_INSTALL_PREFIX="$MINGW_PREFIX" \
+          -DCMAKE_C_COMPILER=gcc \
+          -DCMAKE_CXX_COMPILER=g++ \
+          -DCMAKE_C_FLAGS="-O2 -DNDEBUG" \
+          -DCMAKE_CXX_FLAGS="-O2 -DNDEBUG" \
+          -DZIG_SHARED_LLVM=ON \
+          -DZIG_VERSION="$ZIG_VERSION" \
+          -DZIG_VERSION_MAJOR=0 \
+          -DZIG_VERSION_MINOR=15 \
+          -DZIG_VERSION_PATCH=1 \
+          \
+          # Path configuration \
+          -DLIB_DIR="lib" \
+          -DINCLUDE_DIR="include" \
+          -DBIN_DIR="bin" \
+          -DLIBZIG_DIR="lib/zig" \
+          -DLLVM_BIN_DIR="bin" \
+          -DLLVM_LIB_DIR="lib" \
+          -DLLVM_INCLUDE_DIR="include" \
+          -DCLANG_BIN_DIR="bin" \
+          -DCLANG_LIB_DIR="lib" \
+          -DCLANG_INCLUDE_DIR="include" \
+          -DLLD_BIN_DIR="bin" \
+          -DLLD_LIB_DIR="lib" \
+          -DLLD_INCLUDE_DIR="include" \
+          -DZLIB_LIB_DIR="lib" \
+          -DZLIB_INCLUDE_DIR="include" \
+          -DZSTD_LIB_DIR="lib" \
+          -DZSTD_INCLUDE_DIR="include" \
+          \
+          # Zig configuration (using 1/0 for consistency) \
+          -DZIG_HAVE_LLVM=1 \
+          -DZIG_ENABLE_DEBUG_EXTENSIONS=0 \
+          -DZIG_DEBUG_GPA=0 \
+          -DZIG_DEBUG_ALLOCATOR=0 \
+          -DZIG_DEBUG_BOUNDS_CHECK=0 \
+          -DZIG_DEBUG_SAFE_BUILTINS=1 \
+          -DZIG_DEBUG_STACK_TRACE=1 \
+          -DZIG_DEBUG_SAFETY=1 \
+          -DZIG_DEBUG_VERBOSE=0 \
+          -DZIG_DEBUG_OPTIMIZE=0 \
+          -DZIG_ENABLE_LOGGING=0 \
+          -DZIG_ENABLE_TRACY=0 \
+          -DZIG_ENABLE_LLVM=1 \
+          -DZIG_ENABLE_ZLIB=1 \
+          -DZIG_ENABLE_ZSTD=1 \
+          -DZIG_STATIC_ZLIB=0 \
+          -DZIG_STATIC_ZSTD=0 \
+          -DZIG_USE_LLD=0 \
+          -DZIG_USE_SYSTEM_LLVM=1 \
+          -DZIG_USE_SYSTEM_ZLIB=1 \
+          -DZIG_USE_SYSTEM_ZSTD=1 \
+          -DZIG_USE_SYSTEM_LIBC=1 \
+          -DZIG_ENABLE_TESTS=0 \
+          -DZIG_ENABLE_EXPERIMENTAL=0 \
+          -DZIG_VERBOSE=0 \
+          -DZIG_IS_STAGE1=0 \
+          -DZIG_ONLY_C=0 \
+          -DZIG_ONLY_CPP=0 \
+          -DZIG_FORCE_GPA=0 \
+          -DZIG_SANITIZE_C=0 \
+          -DZIG_CODE_MODEL="default" \
+          -DZIG_PIC=0 \
+          -DZIG_PIE=0 \
+          -DZIG_RED_ZONE=1 \
+          -DZIG_OMIT_FRAME_POINTER=0 \
+          -DZIG_SINGLE_THREADED=0 \
+          -DZIG_STRIP=0 \
+          -DZIG_LINK_LIBC=0 \
+          -DZIG_LINK_LIBCPP=0 \
+          -DZIG_FUNCTION_SECTIONS=0 \
+          -DZIG_NO_BUILTIN=0 \
+          -DZIG_RUNTIME_SAFETY=1 \
+          -DZIG_TEST_FILTER="" \
+          -DZIG_TEST_NAME_PREFIX="" \
+          -DZIG_NO_LIB=ON \
+          2>&1 | tee cmake-configure.log
           
           if [ $? -ne 0 ]; then
             echo "CMake configuration failed. Full log:"
